fix: fix UnsupportedOperationException on gatling:recorder
Motivation:

Arrays.asList returns an unmodifiable List.